--- a/lesson_wms/src/main/res/layout/activity_google_view.xml
+++ b/lesson_wms/src/main/res/layout/activity_google_view.xml
@@ -25,4 +25,12 @@
         android:layout_gravity="end"
         android:text="SHOW POPUPWINDOW" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_gravity="end"
+        android:layout_marginTop="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="show bottom sheet dialog" />
+
 </FrameLayout>
